# AndroidNDKTips

./: Readme.md
001HiXmakeAndJni/: Readme.md  settings.gradle.kts
001HiXmakeAndJni/app/: .gitignore  build.gradle.kts
001HiXmakeAndJni/app/src/androidTest/java/com/brokendream/hixmakeandjni/: ExampleInstrumentedTest.kt
001HiXmakeAndJni/app/src/main/: AndroidManifest.xml
001HiXmakeAndJni/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
001HiXmakeAndJni/app/src/main/cpp/xmake/: xmake.lua
001HiXmakeAndJni/app/src/main/cpp/xmake/src/: hi.cpp
001HiXmakeAndJni/app/src/main/java/com/brokendream/hixmakeandjni/: MainActivity.kt
001HiXmakeAndJni/app/src/main/java/com/brokendream/xmake/: Native.kt
001HiXmakeAndJni/app/src/main/res/layout/: activity_main.xml
001HiXmakeAndJni/app/src/main/res/values/: strings.xml  themes.xml
001HiXmakeAndJni/app/src/main/res/values-night/: themes.xml
001HiXmakeAndJni/app/src/test/java/com/brokendream/hixmakeandjni/: ExampleUnitTest.kt
001HiXmakeAndJni/gradle/: libs.versions.toml
001HiXmakeAndJni/gradle/wrapper/: gradle-wrapper.properties
002HiXmake/: Readme.md  settings.gradle.kts
002HiXmake/app/: build.gradle.kts
002HiXmake/app/src/main/: AndroidManifest.xml
002HiXmake/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
002HiXmake/app/src/main/cpp/xmake/: xmake.lua
002HiXmake/app/src/main/cpp/xmake/src/: add.cpp
002HiXmake/app/src/main/res/values/: strings.xml  themes.xml
002HiXmake/app/src/main/res/values-night/: themes.xml
002HiXmake/gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
